--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ footer {
     position: fixed;
     width: 100%;
     bottom: 0;
+    z-index: 1000; /* Certifica-se de que o rodapé fique acima do conteúdo */
 }
 
 body {
