--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
     padding: 0;
     background-color: #f4f4f4;
     color: #333;
+    height: 100%;
+    padding-bottom: 0; /* Ajuste para que o rodapé não sobreponha o conteúdo */
 }
 
 /* Cabeçalho */
@@ -59,15 +61,11 @@ footer {
     text-align: center;
     padding: 8px 0; /* Reduzi o padding */
     font-size: 14px; /* Tamanho da fonte reduzido */
-    position: fixed;
+    position:relative; 
     width: 100%;
     bottom: 0;
     z-index: 1000;
-}
-
-/* Ajuste de padding do body para evitar sobreposição do rodapé */
-body {
-    padding-bottom: 100px; /* Ajuste para que o rodapé não sobreponha o conteúdo */
+    margin-top: auto; /* Garante que o rodapé fique no final da página */
 }
 
 /* Créditos de IA */
@@ -220,7 +218,7 @@ body {
 /* Botão para abrir/fechar o formulário */
 .toggle-form-button {
     position: fixed;
-    bottom: 120px; /* Ajuste para garantir que o botão fique acima do rodapé */
+    bottom: 60px; /* Ajuste para garantir que o botão fique acima do rodapé */
     right: 20px;
     background-color: #28a745;
     color: #fff;
@@ -259,8 +257,8 @@ footer {
     background-color: #333;
     color: #fff;
     text-align: center;
-    position: fixed;
-    padding: 5px 0;
+    position: relative;
+    padding: 10px 0;
     bottom: 0;
     left: 0;
     width: 100%;
